# artifactsmmo-semi-auto-bot

./: .gitignore  :w  AGENTS.md  Cargo.toml  README.md  todo.md
api/: .gitignore  Cargo.toml
api/src/: account.rs  characters.rs  events.rs  items.rs  lib.rs  maps.rs  monsters.rs  server.rs  (+3 more)
artifactsmmo_sdk/: Cargo.toml
artifactsmmo_sdk/src/: account.rs  bank.rs  base_character.rs  char.rs  char_config.rs  character.rs  events.rs  fight_simulator.rs  game.rs  game_config.rs  gear.rs  gear_finder.rs  inventory.rs  items.rs  leveling_helper.rs  lib.rs  maps.rs  monsters.rs  orderboard.rs  resources.rs  tasks.rs  tasks_rewards.rs
artifactsmmo_sdk/src/api/: bank.rs  characters.rs  events.rs  items.rs  maps.rs  mod.rs  monsters.rs  my_characters.rs  resources.rs  tasks.rs
artifactsmmo_sdk/src/char/: action.rs  base_character.rs  character.rs
crates/api/: Cargo.toml
crates/api/src/: account.rs  bank.rs  characters.rs  events.rs  grand_exchange.rs  items.rs  lib.rs  maps.rs  monsters.rs  my_characters.rs  npcs.rs  rate_limiter.rs  resources.rs  server.rs  tasks.rs
crates/bot/: Cargo.toml
crates/bot/src/: account.rs  bank.rs  bot.rs  bot_config.rs  character.rs  cli.rs  error.rs  gear_finder.rs  inventory.rs  leveling_helper.rs  lib.rs  main.rs  orderboard.rs  reservable.rs
crates/bot/src/gear_finder/: artifact_set.rs  component.rs  filter.rs  item_wrapper.rs  mod.rs  ring_set.rs  utility_set.rs
crates/openapi/: .openapi-generator-ignore  Cargo.toml  README.md  gen.sh  generator-config.yaml  openapi.json  update_spec.sh
crates/openapi/.openapi-generator/: FILES
crates/openapi/docs/: AccessSchema.md  AccountAchievementObjectiveSchema.md  AccountAchievementSchema.md  AccountDetails.md  AccountDetailsSchema.md  AccountLeaderboardSchema.md  AccountLeaderboardType.md  AccountStatus.md  AccountsApi.md  AchievementObjectiveSchema.md  AchievementResponseSchema.md  AchievementRewardsSchema.md  AchievementSchema.md  AchievementType.md  AchievementsApi.md  ActionType.md  ActiveCharacterSchema.md  ActiveEventResponseSchema.md  ActiveEventSchema.md  AddAccountSchema.md  AddCharacterSchema.md  BadgeConditionSchema.md  BadgeResponseSchema.md  BadgeSchema.md  BadgesApi.md  BankExtensionSchema.md  BankExtensionTransactionResponseSchema.md  BankExtensionTransactionSchema.md  BankGoldTransactionResponseSchema.md  BankGoldTransactionSchema.md  BankItemTransactionResponseSchema.md  BankItemTransactionSchema.md  BankResponseSchema.md  BankSchema.md  ChangePassword.md  ChangeSkinCharacterDataSchema.md  ChangeSkinCharacterSchema.md  ChangeSkinResponseSchema.md  CharacterFightDataSchema.md  CharacterFightResponseSchema.md  (+196 more)
crates/openapi/src/apis/: accounts_api.rs  achievements_api.rs  badges_api.rs  characters_api.rs  configuration.rs  effects_api.rs  events_api.rs  game_assistant_api.rs  gems_shop_api.rs  grand_exchange_api.rs  items_api.rs  leaderboard_api.rs  maps_api.rs  mod.rs  monsters_api.rs  my_account_api.rs  my_characters_api.rs  npcs_api.rs  raids_api.rs  resources_api.rs  season_rewards_api.rs  server_details_api.rs  simulation_api.rs  skins_api.rs  tasks_api.rs  token_api.rs
crates/openapi/src/models/: access_schema.rs  account_achievement_objective_schema.rs  account_achievement_schema.rs  account_details.rs  account_details_schema.rs  account_leaderboard_schema.rs  account_leaderboard_type.rs  account_status.rs  achievement_objective_schema.rs  achievement_response_schema.rs  achievement_rewards_schema.rs  achievement_schema.rs  achievement_type.rs  action_type.rs  active_character_schema.rs  active_event_response_schema.rs  active_event_schema.rs  add_account_schema.rs  add_character_schema.rs  assistant_answer_data_schema.rs  assistant_answer_schema.rs  assistant_question_schema.rs  badge_condition_schema.rs  badge_response_schema.rs  badge_schema.rs  bank_extension_schema.rs  bank_extension_transaction_response_schema.rs  bank_extension_transaction_schema.rs  bank_gold_transaction_response_schema.rs  bank_gold_transaction_schema.rs  bank_item_transaction_response_schema.rs  bank_item_transaction_schema.rs  bank_response_schema.rs  bank_schema.rs  buy_custom_design_request_schema.rs  buy_skin_request_schema.rs  buy_skin_response_data_schema.rs  buy_skin_response_schema.rs  change_email_schema.rs  change_password.rs  (+255 more)
crates/repl/: Cargo.toml
crates/repl/src/: cli.rs  main.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: consts.rs  container.rs  gear.rs  lib.rs  skill.rs  test_support.rs  test_utils.rs
crates/sdk/src/client/: account.rs  bank.rs  error.rs  events.rs  grand_exchange.rs  items.rs  maps.rs  mod.rs  monsters.rs  npcs.rs  npcs_items.rs  resources.rs  server.rs  tasks.rs  tasks_rewards.rs
crates/sdk/src/client/character/: action.rs  action_request.rs  data_handle.rs  error.rs  handler.rs  inventory.rs  mod.rs  request.rs  request_handler.rs  responses.rs
crates/sdk/src/entities/: account_achievement.rs  active_event.rs  character.rs  event.rs  item.rs  map.rs  mod.rs  monster.rs  npc.rs  npc_item.rs  pending_item.rs  resource.rs  task.rs  task_reward.rs
crates/sdk/src/simulator/: damage_type.rs  effect_code.rs  entity.rs  has_effects.rs  hit.rs  mod.rs
crates/sdk/tests/fixtures/: events.ron  items.json  items.ron  maps.ron  monsters.json  monsters.ron  npcs.ron  npcs_items.ron  resources.ron  tasks.ron  tasks_rewards.ron
crates/sdk_derive/: Cargo.toml
crates/sdk_derive/src/: lib.rs
sdk/: Cargo.toml
sdk/derive/: Cargo.toml
sdk/derive/src/: lib.rs
sdk/src/: account.rs  bank.rs  base_bank.rs  char.rs  consts.rs  events.rs  fight_simulator.rs  game.rs  gear.rs  gear_finder.rs  inventory.rs  item_code.rs  items.rs  leveling_helper.rs  lib.rs  maps.rs  monsters.rs  resources.rs  server.rs  simulator.rs  tasks.rs  tasks_rewards.rs
sdk/src/char/: action.rs  base_character.rs  base_inventory.rs  character.rs  inventory.rs  request_handler.rs  smart_character.rs
src/: account.rs  artifactsmmo_sdk.rs  bank.rs  bot.rs  bot_config.rs  character.rs  cli.rs  error.rs  gear_finder.rs  inventory.rs  leveling_helper.rs  lib.rs  main.rs  orderboard.rs
(+36 files in other folders)
