[workspace]
resolver = "2"
members = [
  #
  "crates/openapi",
  "crates/api",
  "crates/sdk",
  "crates/sdk_derive",
  "crates/bot",
  "crates/repl",
]
default-members = ["crates/repl"]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]

# member 
openapi = { path = "crates/openapi" }
api = { path = "crates/api" }
sdk = { path = "crates/sdk" }
sdk_derive = { path = "crates/sdk_derive" }
bot = { path = "crates/bot" }
repl = { path = "crates/repl" }

# external
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
derive_more = { version = "2.0", features = ["try_from"] }
downcast-rs = "2.0"
dyn-clone = "1.0"
figment = { version = "0.10", features = ["toml"] }
fs_extra = "1.3"
itertools = "0.14"
log = "0.4"
ordered-float = "5.0"
quote = "1.0.40"
rand = "0.10"
rayon = "1.11"
reqwest = { version = "^0.13", default-features = false, features = [
  "json",
  "blocking",
  "multipart",
  "query",
  "form",
] }
rustyline = "17.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_repr = "0.1"
simple-logging = "2.0"
strum = "0.28"
strum_macros = "0.28"
syn = "2.0.100"
thiserror = "2.0"
url = "2.5"
