[workspace]
resolver = "3"
members = [
  #
  "crates/openapi",
  "crates/api",
  "crates/sdk",
  "crates/sdk_derive",
  "crates/bot",
  "crates/repl",
]
default-members = ["crates/repl"]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]

# member 
openapi = { path = "crates/openapi" }
api = { path = "crates/api" }
sdk = { path = "crates/sdk" }
sdk_derive = { path = "crates/sdk_derive" }
bot = { path = "crates/bot" }
repl = { path = "crates/repl" }

# external
anyhow = "1.0.102"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
derive_more = { version = "2.1.1", features = [
  "deref",
  "display",
  "from",
  "try_from",
] }
downcast-rs = "2.0.2"
dyn-clone = "1.0.20"
figment = { version = "0.10.19", features = ["toml"] }
fs_extra = "1.3.0"
itertools = "0.15.0"
log = "0.4.32"
ordered-float = "5.3.0"
quote = "1.0.45"
rand = "0.10.1"
rayon = "1.12.0"
reqwest = { version = "0.13.4", default-features = false, features = [
  "json",
  "blocking",
  "multipart",
  "query",
  "form",
] }
rustyline = "18.0.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.150"
serde_repr = "0.1.20"
simple-logging = "2.0.2"
strum = "0.28.0"
strum_macros = "0.28.0"
syn = "2.0.118"
thiserror = "2.0.18"
url = "2.5.8"
