[package]
name = "artifactsmmo-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
artifactsmmo-openapi = { path = "../../artifactsmmo-openapi/", version = "3.2.0" }
serde = "1.0.210"
serde_json = "^1.0"
reqwest = { version = "^0.12", features = ["json", "blocking", "multipart"] }
chrono = "0.4.38"
strum = "0.26.3"
strum_macros = "0.26.4"
log = "0.4"
itertools = "0.13.0"
figment = { version = "0.10", features = ["toml"] }
ordered-float = "4.2.2"
downcast-rs = "1.2.1"
fs_extra = "1.3.0"
thiserror = "2.0.4"
rayon = "1.10.0"
