[package]
name = "artifactsmmo-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
artifactsmmo-api-wrapper = { path = "../api/", version = "0.1.0" }
artifactsmmo-openapi = { path = "../../artifactsmmo-openapi/", version = "3.2.0" }
chrono = "0.4.38"
derive_more = { version = "2.0.1", features = ["try_from"] }
downcast-rs = "1.2.1"
fs_extra = "1.3.0"
itertools = "0.13.0"
log = "0.4"
ordered-float = "4.2.2"
reqwest = { version = "^0.12", features = ["json", "blocking", "multipart"] }
sdk_derive = { version = "0.1.0", path = "derive" }
serde = { version = "^1.0", features = ["rc"] }
serde_json = "^1.0"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "2.0.4"
