[package]
name = "api"
version = "0.1.0"
description = "Thin wrapper around the openapi generated code easing its usage."
edition.workspace = true
publish.workspace = true

[dependencies]
openapi.workspace = true

[lints.clippy]
pedantic = { level = "warn" }
nursery = { level = "warn" }
missing_panics_doc = { level = "allow" }
missing_errors_doc = { level = "allow" }
must_use_candidate = { level = "allow" }
