[package]
name = "bot"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
sdk.workspace = true
chrono.workspace = true
clap.workspace = true
figment.workspace = true
itertools.workspace = true
log.workspace = true
ordered-float.workspace = true
rayon.workspace = true
rustyline.workspace = true
serde.workspace = true
simple-logging.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]
[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/opt/homebrew/opt/llvm/bin/ld64.lld"]
