[package]
name = "bot"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
sdk.workspace = true
chrono.workspace = true
clap.workspace = true
figment.workspace = true
itertools.workspace = true
log.workspace = true
ordered-float.workspace = true
rayon.workspace = true
rustyline.workspace = true
serde.workspace = true
simple-logging.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true

[lints.clippy]
pedantic = { level = "warn" }
nursery = { level = "warn" }
