[package]
name = "sdk_derive"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
quote.workspace = true
syn.workspace = true

[lib]
proc-macro = true

[lints.clippy]
pedantic = { level = "warn" }
nursery = { level = "warn" }
missing_panics_doc = { level = "allow" }
missing_errors_doc = { level = "allow" }
